clang/test/Ripple/ripple-parallel/vector-thread-nesting-invalid.c
// NOTE: Assertions have been autogenerated by utils/update_cc_test_checks.py UTC_ARGS: --version 6
// REQUIRES: target=hexagon{{.*}} || target-aarch64 || target-x86_64
// RUN: %clang -ffreestanding -S -Xclang -disable-llvm-passes -emit-llvm -fenable-ripple %s -o %t.pragma.out -DUSING_PRAGMA=1 2> %t.pragma.err; FileCheck %s --input-file=%t.pragma.err --check-prefixes=CHECK-PRAGMA
// RUN: %clang -ffreestanding -S -Xclang -disable-llvm-passes -emit-llvm -fenable-ripple %s -o %t.out 2> %t.err; FileCheck %s --input-file=%t.err

#include "../ripple_test.h"


void check(int Chunk, int64_t N, int32_t start, int64_t end, float x[restrict N],
           float y[restrict N], float xpy[restrict N]) {
  ripple_thd_block_t ThreadBlockT = ripple_thd_init(0, NULL);
  ripple_block_t BSV = ripple_set_block_shape(33, 4, 4);
  #ifdef USING_PRAGMA
  #pragma ripple parallel Block(BSV) Dims(1)
  #pragma ripple parallel Block(ThreadBlockT) Dims(0) ThreadChunk(Chunk)
  #else
  ripple_parallel(BSV, 1);
  ripple_parallel_thd_chunk(ThreadBlockT, Chunk, 0);
  #endif
  for (int i = start; i < end; ++i)
    xpy[i] = x[i] + y[i];
  ripple_thd_exit(ThreadBlockT);
}

// CHECK-PRAGMA:      vector-thread-nesting-invalid.c:14:3: error: invalid use of a ripple parallel vector on top of a ripple parallel thread
// CHECK-PRAGMA-NEXT:    14 |   #pragma ripple parallel Block(BSV) Dims(1)
// CHECK-PRAGMA-NEXT:       |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// CHECK-PRAGMA-NEXT: vector-thread-nesting-invalid.c:15:3: note: previous use is here
// CHECK-PRAGMA-NEXT:    15 |   #pragma ripple parallel Block(ThreadBlockT) Dims(0) ThreadChunk(Chunk)
// CHECK-PRAGMA-NEXT:       |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

// CHECK:      vector-thread-nesting-invalid.c:17:3: error: invalid use of a ripple parallel vector on top of a ripple parallel thread
// CHECK-NEXT:    17 |   ripple_parallel(BSV, 1);
// CHECK-NEXT:       |   ^~~~~~~~~~~~~~~~~~~~~~~
// CHECK:      vector-thread-nesting-invalid.c:18:3: note: previous use is here
// CHECK-NEXT:    18 |   ripple_parallel_thd_chunk(ThreadBlockT, Chunk, 0);
// CHECK-NEXT:       |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~